<package>
  <name>bag_tools</name>
  <version>0.0.3</version>
  <description>ROS tools and scripts related to bagfiles</description>
  <maintainer email="miquel.massot@uib.es">Miquel Massot</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bag_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="stwirth@uib.es">Stephan Wirth</author>
  <author email="miquel.massot@uib.es">Miquel Massot</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>stereo_image_proc</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>libconsole-bridge-dev</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>stereo_image_proc</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>libconsole-bridge-dev</run_depend>
  <export>
  </export>
</package>
