<package>
  <name>launch_tools</name>
  <version>0.0.3</version>
  <description>ROS tools and scripts related to launchfiles</description>
  <maintainer email="miquel.massot@uib.es">Miquel Massot</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/launch_tools</url>

  <author email="stwirth@uib.es">Stephan Wirth</author>
  <author email="miquel.massot@uib.es">Miquel Massot</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-xdot</run_depend>
  <run_depend>roslib</run_depend>

</package>
