<package>
  <name>plot_tools</name>
  <version>0.0.3</version>
  <description>plot_tools</description>
  <maintainer email="plnegre@uib.cat">Pep Lluis Negre</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/plot_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Pep Lluis Negre</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <!-- <test_depend>rospy</test_depend> -->

  <export>

  </export>
</package>
